# Boid

./: CMakeLists.txt  README.md
include/: Robot.h
libs/: CMakeLists.txt  Robot.cpp
src/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp
visualizer/: README.md  coordinates-ex.txt  coordinates.txt  coordinates10.txt  coordinates100.txt  coordinates2.txt  coordinates3.txt  coordinates4.txt  coordinates50.txt  visualizer.py
